# cs43-assignments

./: .ghci  .gitignore
assignment1/: README.md  assignment1.cabal
assignment1/.stack-work/: stack.sqlite3
assignment1/.stack-work/ghci/0109fa52/: cabal_macros.h
assignment1/.stack-work/ghci/3cfcdae6/: cabal_macros.h
assignment1/.stack-work/ghci/94c96e1c/: cabal_macros.h
assignment1/.stack-work/ghci/b3c750d5/: cabal_macros.h
assignment1/.stack-work/install/x86_64-osx/208877588e53e0361813e3085cb95398a5e43368b04bd92a054aa0ab80630962/8.6.5/lib/x86_64-osx-ghc-8.6.5/assignment1-0.1.0.0-2xS3RojmgTI6qAHBtIjeSx/: LSystem.dyn_hi  LSystem.hi  ListProcess.dyn_hi  ListProcess.hi
assignment1/.stack-work/install/x86_64-osx/208877588e53e0361813e3085cb95398a5e43368b04bd92a054aa0ab80630962/8.6.5/lib/x86_64-osx-ghc-8.6.5/assignment1-0.1.0.0-3w9SPJq5QFn5Ek3YAl6gn0/: ListProcess.dyn_hi  ListProcess.hi
assignment1/.stack-work/install/x86_64-osx/208877588e53e0361813e3085cb95398a5e43368b04bd92a054aa0ab80630962/8.6.5/lib/x86_64-osx-ghc-8.6.5/assignment1-0.1.0.0-4T0nLCjBNhZLQfedIYVxq0/: ListProcess.dyn_hi  ListProcess.hi
assignment1/.stack-work/install/x86_64-osx/208877588e53e0361813e3085cb95398a5e43368b04bd92a054aa0ab80630962/8.6.5/lib/x86_64-osx-ghc-8.6.5/assignment1-0.1.0.0-6ENGcrQgHTUHL7sbPpRWSU/: ListProcess.dyn_hi  ListProcess.hi
assignment1/.stack-work/install/x86_64-osx/208877588e53e0361813e3085cb95398a5e43368b04bd92a054aa0ab80630962/8.6.5/lib/x86_64-osx-ghc-8.6.5/assignment1-0.1.0.0-7z2NAWLKdlC84r2Cr7RJB4/: LSystem.dyn_hi
assignment1/.stack-work/install/x86_64-osx/208877588e53e0361813e3085cb95398a5e43368b04bd92a054aa0ab80630962/8.6.5/lib/x86_64-osx-ghc-8.6.5/assignment1-0.1.0.0-BWHhSLqdTm3LdHEUKtBEvo/: ListProcess.dyn_hi  ListProcess.hi
assignment1/.stack-work/install/x86_64-osx/208877588e53e0361813e3085cb95398a5e43368b04bd92a054aa0ab80630962/8.6.5/pkgdb/: assignment1-0.1.0.0-7z2NAWLKdlC84r2Cr7RJB4.conf  package.cache
assignment1/app/: Main.hs
assignment1/src/: LSystem.hs  ListProcess.hs  Primes.hs
assignment1/test/: LSystemSpec.hs  ListProcessSpec.hs  PrimesSpec.hs  Spec.hs
assignment2/: README.md  assignment2.cabal
assignment2/.stack-work/: stack.sqlite3
assignment2/.stack-work/ghci/7855b67e/: cabal_macros.h
assignment2/.stack-work/ghci/a2f97d07/: cabal_macros.h
assignment2/.stack-work/install/x86_64-osx/000540cc02a5e9c2215c3329ac80917ac23967f0cb32fc6e96bd558083691c19/8.6.5/lib/x86_64-osx-ghc-8.6.5/assignment2-0.1.0.0-FqQiPDvI42oACrYw2QY65G/: Exception2.dyn_hi  Exception2.hi  Problem1.dyn_hi  Problem2.hi  WeatherApp2.dyn_hi
assignment2/.stack-work/install/x86_64-osx/000540cc02a5e9c2215c3329ac80917ac23967f0cb32fc6e96bd558083691c19/8.6.5/lib/x86_64-osx-ghc-8.6.5/assignment2-0.1.0.0-KvkQ6CwMOGqHPhsNW3hLE/: Exception1.dyn_hi  Exception1.hi  Exception2.dyn_hi  Exception2.hi  WeatherApp1.dyn_hi  WeatherApp1.hi  WeatherApp2.dyn_hi  WeatherApp2.hi
assignment2/.stack-work/install/x86_64-osx/000540cc02a5e9c2215c3329ac80917ac23967f0cb32fc6e96bd558083691c19/8.6.5/pkgdb/: assignment2-0.1.0.0-FqQiPDvI42oACrYw2QY65G.conf  package.cache
assignment2/src/: Exception1.hs  Exception2.hs  Problem1.hs  Problem2.hs  WeatherApp1.hs  WeatherApp2.hs
assignment2/test/p1/: Problem1Spec.hs
assignment2/test/p2/: Problem2Spec.hs
assignment2/test/p3/: Exception2Spec.hs  WeatherApp2Spec.hs
assignment3/: README.md  assignment3.cabal
assignment3/app/: Main.hs
assignment3/src/: Interpreter.hs  Language.hs  Parser.hs  Problem1.hs
assignment4/: README.md  assignment4.cabal  stack.yaml
assignment4-rio/: assignment4-rio.cabal
assignment4-rio/src/: Main3.hs  Main6.hs  RIO.hs  STMonad.hs
assignment4/src/: Main1.hs  Main2.hs  Main4.hs  Main5.hs  Main6.hs  STMonad.hs
