name:                assignment1
version:             0.1.0.0
synopsis:            Assignment 1 for CS43.
description:         A three-part assignment, with tests.
homepage:            https://github.com/githubuser/assignment1#readme
license:             BSD3
license-file:        LICENSE
author:              Isaac Scheinfeld
maintainer:          ischeinfeld@stanford.edu
copyright:           2020 Isaac Scheinfeld
category:            Education
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     ListProcess
                     , LSystem
                     , Primes
  build-depends:       base >= 4.7 && < 5
                     , containers
  default-language:    Haskell2010

executable draw
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , assignment1
                     , diagrams
                     , diagrams-lib
                     , diagrams-contrib
                     , diagrams-rasterific
                     , optparse-applicative
                     , containers
  default-language:    Haskell2010

test-suite assignment1-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:       ListProcessSpec
  main-is:             Spec.hs
  build-depends:       base
                     , containers
                     , assignment1
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
