name:                assignment2
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2020 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Problem1
                     , Problem2
                     , WeatherApp1
                     , WeatherApp2
                     , Exception1
                     , Exception2
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite p1
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test/p1
  main-is:             Spec.hs
  build-depends:       base
                     , assignment2
                     , hspec
                     , QuickCheck
                     , checkers
                     , hspec-checkers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite p2
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test/p2
  main-is:             Spec.hs
  build-depends:       base
                     , assignment2
                     , hspec
                     , QuickCheck
                     , checkers
                     , hspec-checkers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite p3
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test/p3
  main-is:             Spec.hs
  build-depends:       base
                     , assignment2
                     , hspec
                     , QuickCheck
                     , checkers
                     , hspec-checkers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
