name:                assignment3
version:             0.1.0.0
synopsis:            Assignment 3 for CS43.
description:         A simple language interpreter
license:             BSD3
license-file:        LICENSE
author:              Isaac Scheinfeld
maintainer:          ischeinfeld@stanford.edu
copyright:           2020 Isaac Scheinfeld
category:            Education
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Parser
                     , Language
                     , Interpreter
                     , Problem1
  build-depends:       base >= 4.7 && < 5
                     , containers
  default-language:    Haskell2010

executable interpret
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , assignment3
                     , containers
  default-language:    Haskell2010
