name:                assignment4-rio
author:              Isaac Scheinfeld
version:             1.0.0
maintainer:          ischeinfeld@outlook.com
copyright:           2020 Isaac Scheinfeld
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable app
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       Main1
                     , Main2
                     , Main3
                     , Main4
                     , Main5
                     , Main6
                     , RIO
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , time
                     , superrecord
